--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,9 @@
     font-family: var(--font-montserrat), ui-sans-serif, system-ui, sans-serif;
   }
 }
+
+@theme {
+  --color-baby-blue: #edf1f6;
+  --color-navy-blue: #212141;
+  --color-yellow: #f4ce46;
+}
