Responsive design and styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 
 @theme {
   --color-baby-blue: #edf1f6;
+  --color-grand-blue: #4864ab;
   --color-navy-blue: #212141;
   --color-yellow: #f4ce46;
 }
